alt do nome do projeto

--- a/dom-projeto_incial/projeto_inicial/index.html
+++ b/dom-projeto_incial/projeto_inicial/index.html
@@ -21,6 +21,11 @@
       </form>
 
       <ul class="list">
+        <li class="task">
+          <p class="content">
+           comprar um abacate
+          </p>
+        </li>
       
       </ul>
     </div>
